# ScrumiX

./: .coverage  .gitignore  DEV_GUIDELINES.md  FRONTEND_AUTH_INTEGRATION.md  INTEGRATION_GUIDE.md  KEYCLOAK_OAUTH_SETUP.md  KEYCLOAK_USER_DISPLAY_UPDATES.md  NOTIFICATION_INFINITE_LOADING_FIX.md  NOTIFICATION_SETUP_GUIDE.md  POSTGRESQL_CONNECTION_SOLUTION.md  PROFILE_INTEGRATION_SUMMARY.md  README.md  TODO_DOCKER_COMPLETION.md  coverage.xml  scrumix.db  test.db  test_cookie_auth.ps1  test_notifications.py  test_output.txt
backend/: .dockerignore  .env.example  BURNDOWN_CHART_DURATION_FIX.md  Dockerfile  EVENT_DRIVEN_BURNDOWN_IMPLEMENTATION.md  Makefile  RACE_CONDITION_FIX.md  README.md  VELOCITY_AND_IDEAL_BURNDOWN_FIXES.md  VELOCITY_BURNDOWN_IMPLEMENTATION.md  coverage.xml  create_database.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  run_tests.py  scrumix.db  start.sh  test.db  test_connection.py  test_connection_windows.py  test_cookie_auth.py  test_embedding_generation.py  test_profile_integration.py  test_sqlalchemy.py
backend/alembic/: env.py
backend/alembic/versions/: 10d5ba60568b_fix_chat_messages_text_content.py  1563045a83ad_add_composite_unique_constraint_sprint_.py  1964dcb11413_add_first_last_name_and_date_format_to_.py  23d40bd15071_add_velocity_tracking_and_burndown_.py  2d6391e941af_add_embeddings_to_documentation.py  309824d53c0e_replace_task_separate_embeddings_with_.py  3d3942b18fb3_merge_profile_fields_and_backlog_tasks_.py  68dc45076940_initial_migration.py  703b060bcad4_merge_heads.py  7beefd09c489_separate_documentation_embeddings.py  7d5fb4bb1734_add_pgvector_embeddings.py  7ea2ee4709d6_add_notifications_tables.py  add_backlog_id_to_tasks.py  (+16 more)
backend/notebooks/: test_keycloak.ipynb  test_openai.ipynb
backend/scrumix/: main.py
backend/tests/: COMPREHENSIVE_TESTING_IMPROVEMENTS.md  README.md  __init__.py  conftest.py  test-connection.py  test_acceptance_criteria.py  test_api_coverage.py  test_auth.py  test_auth_routes_comprehensive.py  test_backlogs.py  test_basic_imports.py  test_business_logic.py  test_comprehensive_coverage.py  test_crud_comprehensive.py  test_crud_simple.py  test_database.py  test_database_comprehensive.py  test_direct_coverage.py  test_documentations.py  test_edge_cases.py  test_final_coverage_boost.py  test_frontend_integration.py  test_init_and_main.py  test_integration_workflows.py  test_main.py  test_main_coverage.py  test_meeting_action_item.py  test_meeting_agenda.py  test_meeting_note.py  test_meetings.py  test_models.py  test_models_comprehensive.py  test_projects.py  test_route_comprehensive.py  test_routes_comprehensive.py  test_run_comprehensive.py  test_security.py  test_security_expanded.py  test_simple_coverage.py  test_sprint_crud_comprehensive.py  (+10 more)
(+388 files in other folders)
